--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "bfg-llmutil"
-version = "0.4.2"
+version = "0.5.0"
 description = "A set of utility functions to handle LLM structural output"
 readme = "README.md"
 authors = [
     { name = "leizha", email = "8961794+leizha@users.noreply.github.com" }
 ]
 requires-python = ">=3.10"
-dependencies = ["openai"]
+dependencies = ["openai", "bfg-schemautil"]
 
 [build-system]
 requires = ["hatchling"]
